    removals (with a minus signal) and does not steal focus anymore. 
  BugFix: Disable refreshing of Info and File tabs while searching for a pkg.
  BugFix: Prefer bash shell when running actions.
  BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
  BugFix: Package search did not work correctly when query string contained a "+" sign.

0.3.0 (2020/07/18)
  BugFix: Removed all xbps-install -f (force) commands.
  BugFix: Enable '*' char in the "Search/by file" option.
  BugFix: Void Linux RSS news page was outdated.
  BugFix: Files tab now shows file list of non installed packages.
  BugFix: If there's xbps inside an upgrade, it is upgraded first.
  BugFix: Enable user close OctoXBPS and notifier's upgrade window during an action.
  BugFix: Use a more complete UI lockdown method during actions.
  Faster startup time thanks to deferred retrieval of outdated packages.
  Added Project Trident support.
  Added GNOME desktop support.
  Added Lumina desktop support.
  Added new sudo tool called "octoxbps-sudo". It's based on "lxqt-sudo" code 
	(without LXQt libs) and its use is mandatory in OctoXBPS.
  Added Terminal tab to execute actions manually.
  Added new icons to UI.
  Added new menu option "File/Install local package" to install any package available
	on your local repositories.
  Added drag and drop support to drop local ".xbps" packages for installation.
  Added new menu option "Search/Use instant search" to toggle automatic filtering 
	search results on package list.
  Added option to never sync database on notifier.
  Added new context menu option "Info" on pkg list.
  Added more information about packages on Info tab.

0.2.2 (2016/11/23)
  BugFix: Reset ProgressWidget range value to 100, so transactions could update 
	percentages once again.

0.2.1 (2016/06/17)
  BugFix: Clicking notifier hides OctoXBPS when it's running.
  BugFix: Notifier was not starting OctoXBPS when action was triggered.

0.2.0 (2016/05/29)